tests/error/linear_errors/method_capture.err
Error: Copy violation (at $FILE:23:8)
   | 
21 | @guppy(module)
22 | def foo(s: Struct @owned) -> Struct:
23 |     f = s.foo
   |         ^^^^^ This expression implicitly constructs a closure that
   |               captures a non-copyable value
   | 
23 |     f = s.foo
   |         - This expression with non-copyable type `Struct` is
   |           implicitly captured

Guppy compilation failed due to 1 previous error
